tests/type_errors/calling_with_incorrect_args.sy
type A = foreign

def f
: Int -> Int
: a = x ' a

def x
: A -> A
: a = a

--+ expected exit status: 101
--+ expected stderr:
--+ check err: CheckUnify { msg: "Failed to merge types", a: "Foreign(Name { name: \"A\", is_type: true, is_foreign: true, def_at: Span(5, 6), usages: [Span(58, 59), Span(63, 64)] })", b: "Int", span: Span(45, 46) }
--+ thread 'main' panicked at 'FAIL', src/main.rs:36:7
--+ note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
